--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,25 @@
 }
 
 body {
-    background-color: #f8f8f8;
+    background-color: #080808;
     color: #fff;
+}
+
+#header {
+    width: 100%;
+    height: 100vh;
+    background-image: url("../img/background-stock.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.container {
+    padding: 10px 5%;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
