--- a/css/style.css
+++ b/css/style.css
@@ -12,18 +12,47 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url("../img/background-stock.jpg");
+    background-image: url("../img/background-stock-two.jpg");
     background-size: cover;
     background-position: center;
 }
 
-.container {
+.nav-container {
     padding: 10px 5%;
 }
 
-.nav-bar {
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
+
+.logo {
+    width: 80px;
+}
+
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2em;
+    position: relative;
+}
+
+nav ul li a::after {
+    content: '';
+    width: 100%;
+    height: 3px;
+    background: #f0004f;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+
+
