--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,22 @@ nav ul li a {
 
 nav ul li a::after {
     content: '';
-    width: 100%;
+    width: 0;
     height: 3px;
-    background: #f0004f;
+    background: #B026FF;
     position: absolute;
     left: 0;
     bottom: 0;
+    transition: 0.5s;
+}
+
+nav ul li a:hover::after {
+    width: 100%;
+}
+
+.header-text {
+    margin-top: 20%;
+    font-size: 1.5em;
 }
 
 
