--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,17 @@ nav ul li a:hover::after {
 }
 
 .header-text {
-    margin-top: 20%;
+    margin-top: 15%;
     font-size: 1.5em;
+}
+
+.header-text h1 {
+    margin-top: 20px;
+    font-size: 1.8em;
+}
+
+.header-text h1 span {
+    color: #B026FF;
 }
 
 
