--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #080808;
     color: #fff;
 }
-
+/* HEADER STYLES */
 #header {
     width: 100%;
     height: 100vh;
@@ -49,7 +49,7 @@ nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #B026FF;
+    background: #a51df4;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -71,11 +71,71 @@ nav ul li a:hover::after {
 }
 
 .header-text h1 span {
-    color: #B026FF;
+    color: #a51df4;
+}
+
+/* ABOUT STYLES */
+
+#about {
+    padding: 80px 0;
+    color: #de004e;
+    background-color: #000;
 }
 
 .about-container {
     padding: 10px 5%;
 }
 
+.row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-one {
+    flex-basis: 35%;
+}
+
+.about-col-one img {
+    width: 100%;
+    border-radius: 15px;
+}
+
+.about-col-two {
+    flex-basis: 60%;
+}
+
+.sub-header {
+    font-size: 3em;
+    font-weight: 600;
+    color: #a51df4;
+}
+
+.tab-titles {
+    display: flex;
+    margin: 20px 0 40px;
+}
+
+.tab-links {
+    margin-right: 50px;
+    font-size: 1.2em;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+
+.tab-links::after {
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #a51df4;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transition: 0.5s;
+}
+
+.tab-links.active-link::after {
+    width: 50%;
+}
 
