--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,21 @@ nav ul li a:hover::after {
     width: 50%;
 }
 
+.tab-contents ul li {
+    list-style: none;
+    margin: 10px 0;
+}
+
+.tab-contents ul li span {
+    color:#a51df4;
+    font-size: 0.8em;
+}
+
+.tab-contents {
+    display: none;
+}
+
+.tab-contents.active-tab {
+    display: block;
+}
+
