--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,10 @@
 }
 
 body {
-    background-color: #080808;
+    background-color: #000;
     color: #fff;
 }
-/* HEADER STYLES */
+/******************** HEADER STYLES *******************/
 #header {
     width: 100%;
     height: 100vh;
@@ -74,12 +74,11 @@ nav ul li a:hover::after {
     color: #a51df4;
 }
 
-/* ABOUT STYLES */
+/***************** ABOUT STYLES ***********************/
 
 #about {
     padding: 80px 0;
     color: #de004e;
-    background-color: #000;
 }
 
 .about-container {
@@ -155,5 +154,28 @@ nav ul li a:hover::after {
 
 .tab-contents.active-tab {
     display: block;
+}
+
+/************* Projects Styles **************/
+
+#projects {
+    padding: 50px 0;
+}
+
+.project-container {
+    padding: 10px 5%;
+}
+
+.project-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 40px;
+    margin-top: 50px;
+}
+
+.project {
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
 }
 
