--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ nav ul li a:hover::after {
 
 #about {
     padding: 80px 0;
-    color: #de004e;
+    color: #39ff14;
 }
 
 .about-container {
@@ -177,5 +177,11 @@ nav ul li a:hover::after {
     border-radius: 10px;
     position: relative;
     overflow: hidden;
+}
+
+.project img {
+    width: 100%;
+    border-radius: 10px;
+    display: block;
 }
 
