--- a/css/style.css
+++ b/css/style.css
@@ -183,11 +183,12 @@ nav ul li a:hover::after {
     width: 100%;
     border-radius: 10px;
     display: block;
+    transition: transform 0.5s;
 }
 
 .layer {
     width: 100%;
-    height: 100%;
+    height: 0;
     background: linear-gradient(rgba(0, 0, 0, 0.6), #39ff14);
     border-radius: 10px;
     position: absolute;
@@ -201,6 +202,7 @@ nav ul li a:hover::after {
     padding: 0 40px;
     text-align: center;
     font-size: 1.2em;
+    transition: height 0.5s;
 }
 
 .layer h3 {
@@ -221,3 +223,33 @@ nav ul li a:hover::after {
     text-align: center;
 }
 
+.project:hover img {
+    transform: scale(1.1);
+}
+
+.project:hover .layer {
+    height: 100%;
+}
+
+.btn {
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #a51df4;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    transition: background 0.5s;
+    font-size: 1.2em;
+}
+
+.btn:hover {
+    background: #a51df4;
+}
+
+/*-------------------Contact Styles------------------*/
+
+.contact-container {
+    padding: 10px 5%;
+}
