--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: #000;
-    color: #fff;
+    color: #e2e1e1;
 }
 /******************** HEADER STYLES *******************/
 #header {
@@ -78,7 +78,7 @@ nav ul li a:hover::after {
 
 #about {
     padding: 80px 0;
-    color: #39ff14;
+    color: #e2e1e1;
 }
 
 .about-container {
@@ -288,4 +288,32 @@ nav ul li a:hover::after {
 
 .contact-right {
     flex-basis: 60%;
+}
+
+.contact-right form {
+    width: 100%;
+}
+
+form input, form textarea {
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 1.2em;
+    border-radius: 6px;
+}
+
+.btn-two {
+    display: inline-block;
+    background: #a51df4;
+}
+
+form .btn-two {
+    padding: 14px 60px;
+    font-size: 1.2em;
+    margin-top: 20px;
+    cursor: pointer;
 }
