--- a/css/style.css
+++ b/css/style.css
@@ -262,10 +262,13 @@ nav ul li a:hover::after {
 }
 
 .contact-left {
-    flex-basis: 35%;
+    flex-basis: 100%;
 }
 
 .contact-left p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 30px;
     font-size: 1.2em;
 }
@@ -277,6 +280,9 @@ nav ul li a:hover::after {
 }
 
 .social-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 30px;
 }
 
