--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,11 @@ body {
 
 nav {
     display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 1rem;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
@@ -68,7 +73,7 @@ nav ul li a:hover::after {
 }
 
 .header-text {
-    margin-top: 8%;
+    margin-top: 18%;
     font-size: 1.5em;
 }
 
@@ -117,6 +122,11 @@ nav ul li a:hover::after {
     color: #a51df4;
 }
 
+.about-description {
+    padding-top: 20px;
+    font-size: 1.2em;
+}
+
 .tab-titles {
     display: flex;
     margin: 20px 0 40px;
@@ -128,6 +138,24 @@ nav ul li a:hover::after {
     font-weight: 500;
     cursor: pointer;
     position: relative;
+}
+
+.resume-btn {
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #a51df4;
+    background: #5c5b5c;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    transition: background 0.5s;
+    font-size: 1.2em;
+}
+
+.resume-btn:hover {
+    background: #a51df4;
 }
 
 .tab-links::after {
@@ -152,7 +180,7 @@ nav ul li a:hover::after {
 
 .tab-contents ul li span {
     color:#a51df4;
-    font-size: 0.8em;
+    font-size: 1.4em; 
 }
 
 .tab-contents {
@@ -344,7 +372,7 @@ nav .fa-solid {
     }
 
     .header-text {
-        margin-top: 35%;
+        margin-top: 85%;
         font-size: 1em;
     }
 
@@ -358,7 +386,7 @@ nav .fa-solid {
     }
 
     nav ul {
-        background: #a51df4;
+        background: #5c5b5c;
         position: fixed;
         top: 0;
         right: -200px;
