--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ nav ul li a:hover::after {
 }
 
 .header-text {
-    margin-top: 18%;
+    margin-top: 13%;
     font-size: 1.5em;
 }
 
@@ -171,6 +171,10 @@ nav ul li a:hover::after {
 
 .tab-links.active-link::after {
     width: 50%;
+}
+
+.tab-contents a {
+    text-decoration: none;
 }
 
 .tab-contents ul li {
